# spust

./: .gitignore  Cargo.toml  README.md
public/: index.html
src/: errors.rs  lib.rs  main.rs  server.rs  spust.rs
src/api/: mod.rs  route.rs  track.rs  upload.rs
