[package]
name = "spust"
authors = ["n4n5"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Analytics"
homepage = "https://github.com/Its-Just-Nans/spust"
repository = "https://github.com/Its-Just-Nans/spust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.1", features = ["fs"] }
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.35.1", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.38"
tokio-util = "0.7.11"
mime = "0.3.17"
mime_guess = "2.0.4"
