[package]
name = "spust"
version = "0.1.0"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Analytics"
homepage = "https://github.com/Its-Just-Nans/spust"
repository = "https://github.com/Its-Just-Nans/spust"
include = ["LICENSE", "**/*.rs", "public/", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.6.7", features = ["fs"] }
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
log = "0.4.28"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.42"
tokio-util = "0.7.17"
mime = "0.3.17"
mime_guess = "2.0.5"
clap = { version = "4.5.53", features = ["derive"] }
clap_builder = "4.5.53"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
